--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,13 @@
 [Files]
-SALES_PATH=sales_data.csv
+SALES_PATH = sales_data.csv
+
+[Companies]
+COMPANIES = ['TSLA', 'PFE', 'F', 'INTC', 'BAC']
+
+[Database]
+HOST = localhost
+DATABASE = finance
+USER = postgres
+PASSWORD = 123456
+
+
